tests/expectations/parser/program/dollar_eof.out
Error [EPAR0370050]: Could not lex the following content: `$`.

    --> test:6:5
     |
   6 |     $}
     |     ^
